# tapo-p110-ha

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  hacs.json  pyproject.toml  pyrightconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml
custom_components/tapo_p110/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  manifest.json  number.py  select.py  sensor.py  strings.json  switch.py  tpap_client.py
custom_components/tapo_p110/translations/: en.json
openspec/changes/add-dev-tooling-tests/: design.md  proposal.md  tasks.md
openspec/changes/add-dev-tooling-tests/specs/dev-environment/: spec.md
openspec/changes/add-dev-tooling-tests/specs/lint-and-format/: spec.md
openspec/changes/add-dev-tooling-tests/specs/static-type-check/: spec.md
openspec/changes/archive/2026-07-20-add-dev-tooling-tests/specs/ci-pipeline/: spec.md
openspec/changes/archive/2026-07-20-add-dev-tooling-tests/specs/unit-tests/: spec.md
openspec/changes/archive/2026-07-20-refresh-agents-md-architecture/: proposal.md
openspec/changes/archive/2026-07-20-refresh-agents-md-architecture/specs/architecture-documentation/: spec.md
openspec/changes/refresh-agents-md-architecture/: design.md  tasks.md
tapo_p110/: binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  number.py  select.py  sensor.py  services.yaml  switch.py  tpap_client.py
tapo_p110/translations/: en.json
tests/: conftest.py  test_coordinator.py  test_tpap_client.py
tests/fixtures/: spake2_vector.json
